[package]
name = "reward-center"
description="A Metaplex auctioneer program that distributes spl token to the buyer and seller of NFTs"
version = "0.1.0"
edition = "2021"
repository="https://github.com/holaplex/reward-center-program"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
hpl-reward-center = { path = "./../program", features = ["no-entrypoint"]}
lazy_static = "1.4.0"
log = "0.4.17"
mpl-auction-house = { version="~1.2.4", features = ["cpi", "no-entrypoint"] }
mpl-token-metadata = { version="~1.2.7", features = [ "no-entrypoint" ] }
serde = { version =  "1.0.145", features = ["derive"] }
serde_yaml = "0.9.13"
solana-logger = "1.9.28"
solana-sdk = "1.9.28"
solana-program = "1.9.28"
solana-client = "1.9.28"
structopt = "0.3.26"
retry = "2.0.0"
shellexpand = "2.1.2"
serde_json = "1.0.86"
bs58 = "0.4.0"
env_logger = "0.9.1"
mpl-auction-house-sdk = { path = "./../sdk/auction-house" }
hpl-reward-center-sdk = {path="./../sdk/reward-center"}
spl-token = "3.2.0"
spl-associated-token-account = "1.0.3"
anchor-lang = "0.24.2"
# tokio = { version = "1.14.1", features = ["full"] }
