[package]
name = "reward-center"
description = "A Metaplex auctioneer program that distributes spl token to the buyer and seller of NFTs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/holaplex/reward-center-program"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.24.2"
anyhow = "1.0.65"
bs58 = "0.4.0"
env_logger = "0.9.1"
hpl-reward-center = { path = "./../program", features = ["no-entrypoint"] }
hpl-reward-center-sdk = { path = "./../sdk/reward-center" }
lazy_static = "1.4.0"
log = "0.4.17"
mpl-auction-house = { version = "~1.2.4", features = ["cpi", "no-entrypoint"] }
mpl-auction-house-sdk = { path = "./../sdk/auction-house" }
mpl-token-metadata = { version = "~1.2.7", features = [ "no-entrypoint" ] }
retry = "2.0.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
serde_yaml = "0.9.13"
shellexpand = "2.1.2"
solana-client = "1.9.28"
solana-logger = "1.9.28"
solana-program = "1.9.28"
solana-sdk = "1.9.28"
spl-associated-token-account = "1.0.3"
spl-token = "3.2.0"
structopt = "0.3.26"
