[package]
name = "hpl-reward-center"
version = "0.2.5"
edition = "2021"
description = "Reward buyers and sellers of NFTs with spl tokens"
authors = ["Holaplex Developers <hola@holaplex.com>"]
repository = "https://github.com/holaplex/reward-center-program"
license = "AGPL-3.0"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-bpf = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "=1.14.13"
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
mpl-auction-house = { version = "1.4.0", features = ["cpi", "no-entrypoint"] }
mpl-token-metadata = { version = "1.9.0", features = [ "no-entrypoint" ] }

[dev-dependencies]
anchor-client = "0.26.0"
shellexpand = "3.0.0"
serde_json = "1.0"
mpl-testing-utils= { path = "./../testing-utils" }
mpl-auction-house-sdk = { path = "./../sdk/auction-house" }
hpl-reward-center-sdk = {path="./../sdk/reward-center"}
solana-program-test = "=1.14.13"
solana-sdk = "=1.14.13"
env_logger="0.10.0"
spl-associated-token-account = { version = "1.1.2", features = ["no-entrypoint"] }
mpl-token-metadata = { version="1.9.0", features = [ "no-entrypoint" ] }
mpl-token-auth-rules = { version = "1.2.0", features = ["no-entrypoint"] }
spl-token = { version = "3.5",  features = ["no-entrypoint"] }

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
strip = true  # Automatically strip symbols from the binary.
opt-level = "z" 
lto = true
codegen-units = 1
