[package]
name = "mpl-auction-house-sdk"
version = "1.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpl-auction-house = { version="~1.2.4", features = ["no-entrypoint"] }
anchor-lang = "~0.24.2"
anchor-client = "~0.24.2"
anchor-spl = "~0.24.2"