[package]
name = "mpl-auction-house-sdk"
version = "1.3.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpl-auction-house = { git = "https://github.com/metaplex-foundation/metaplex-program-library", features = ["no-entrypoint"] }
anchor-lang = "0.26.0"
anchor-client = "0.26.0"
anchor-spl = "0.26.0"
