[package]
name = "hpl-reward-center-sdk"
version = "0.2.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hpl-reward-center = { path = "./../../program", features = ["no-entrypoint"]}
mpl-auction-house = { version="~1.2.4", features = ["no-entrypoint"]}
anchor-lang = "~0.24.2"
anchor-client = "~0.24.2"
spl-associated-token-account = { version = "~1.0.3", features = ["no-entrypoint"] }
spl-token = { version = "~3.2",  features = ["no-entrypoint"] }
